--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,9 +3,7 @@ name: Dockerization
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - workflows
+    branches: [ main, workflows ]
 jobs:
   docker:
     name: Dockerization
